[package]
name = "northstar-tests"
version = "0.7.2-pre"
authors = ["ESRLabs"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
env_logger = "0.10.0"
futures = { version = "0.3.27", default-features = false }
lazy_static = "1.4.0"
log = "0.4.17"
memfd = "0.6.2"
nanoid = "0.4.0"
nix = { version = "0.26.2", features = ["sched"], default-features = false }
northstar-client = { path = "../northstar-client" }
northstar-runtime = { path = "../northstar-runtime", features = ["api", "runtime"] }
northstar-tests-derive = { path = "northstar-tests-derive" }
regex = "1.7.3"
tempfile = "3.5.0"
tokio = { version = "1.27.0", features = ["fs", "time"] }
url = "2.3.1"
