[package]
name = "northstar-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
env_logger = "0.10.2"
futures = { version = "0.3.29", default-features = false }
lazy_static = "1.4.0"
log = "0.4.21"
memfd = "0.6.4"
nanoid = "0.4.0"
nix = { version = "0.28.0", features = ["sched"], default-features = false }
northstar-client = { path = "../northstar-client" }
northstar-runtime = { path = "../northstar-runtime", features = ["api", "runtime"] }
northstar-tests-derive = { path = "northstar-tests-derive" }
regex = "1.10.4"
tempfile = "3.10.1"
tokio = { version = "1.32.0", features = ["fs", "time"] }
url = "2.5.0"
zip = { version = "0.6.6", default-features = false }
