[package]
name = "northstar"
version = "0.6.1-pre"
authors = ["ESRLabs"]
description = "Northstar is an container runtime for Linux targetting embedded systems"
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/esrlabs/northstar"
default-run = "northstar"

[dependencies]
anyhow = { version = "1.0.64", features = ["backtrace"] }
clap = { version = "3.2.17", features = ["derive"] }
log = "0.4.17"
nix = { version = "0.25.0", default-features = false, features = ["sched", "mount"] }
northstar-runtime = { version = "^0.6.1-pre", path = "../northstar-runtime", features = ["runtime"] }
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros", "signal"] }
toml = "0.5.9"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.9.0"

[target.'cfg(target_os = "android")'.dependencies]
android-logd-logger = "0.3.2"
