[package]
name = "northstar"
version = "0.8.2-pre"
authors = ["ESRLabs"]
description = "Northstar is an container runtime for Linux targetting embedded systems"
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/esrlabs/northstar"
default-run = "northstar"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.2.7", features = ["derive"] }
log = "0.4.19"
nix = { version = "0.26.2", default-features = false, features = ["sched", "mount"] }
northstar-runtime = { version = "^0.8.2-pre", path = "../northstar-runtime", features = ["runtime", "rexec"] }
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros", "signal"] }
toml = "0.7.3"

[target.'cfg(not(target_os = "android"))'.dependencies]
bincode = "1.3.3"
console = "0.15.7"
serde = { version = "1.0.162", features = ["derive"] }
time = { version = "0.3.20", features = ["formatting", "macros", "serde"] }

[target.'cfg(target_os = "android")'.dependencies]
android-logd-logger = "0.4.1"
