[package]
name = "northstar"
default-run = "northstar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.80", features = ["backtrace"] }
clap = { version = "4.5.7", features = ["derive"] }
log = { version = "0.4.21", features = ["std"] }
nix = { version = "0.28.0", default-features = false, features = ["sched", "mount"] }
northstar-runtime = { version = "^0.9.2-pre", path = "../northstar-runtime", features = ["runtime", "rexec"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "signal"] }
toml = "0.8.14"

[target.'cfg(not(target_os = "android"))'.dependencies]
bincode = "1.3.3"
console = "0.15.7"
serde = { version = "1.0.164", features = ["derive"] }
time = { version = "0.3.34", features = ["formatting", "macros", "serde"] }

[target.'cfg(target_os = "android")'.dependencies]
android-logd-logger = "0.4.3"
