[package]
name = "northstar_tests"
version = "0.1.0"
authors = ["ESRLabs"]
edition = "2018"

[dependencies]
anyhow = "1.0"
color-eyre = "0.5.11"
env_logger = "0.8.3"
flume = { version = "0.10.5", features = ["async"] }
futures = "0.3.14"
lazy_static = "1.4"
log = "0.4.14"
nix = "0.20.0"
northstar = { path = "../northstar", features = ["api"] }
npk = { path = "../npk" }
regex = "1.4"
rusty-fork = "0.3.0"
tempfile = "3.2"
tokio = { version = "1.5", features = ["full"] }
url = "2.2"

[build-dependencies]
tempfile = "3.2"
escargot = "0.5.2"
npk = { path = "../npk" }
tokio = { version = "1.5", features = ["full"] }

[features]
default = ["rt-island"]
rt-island = ["northstar/rt-island"]
rt-minijail = ["northstar/rt-minijail"]
