[package]
name = "npk"
version = "0.1.0"
authors = ["ESRLabs"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
byteorder = "1.3.4"
ed25519-dalek = "1.0.1"
fs_extra = "1.2.0"
hex = "0.4.2"
itertools = "0.10.0"
lazy_static = "1.4.0"
log = { version = "0.4.11", features = [ "serde"] }
rand = "0.7"
regex = "1.4.2"
semver = "0.11.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.15"
sha2 = "0.9.2"
structure = "0.1.2"
tempfile = "3.1.0"
thiserror = "1.0.23"
tokio = { version = "1.0.1" }
uuid = { version = "0.8.1", features = ["v4"] }
which = "4.0.2"
zip = { git = "https://github.com/esrlabs/zip.git", branch = "support-extra-field", features = ["unreserved"] }

[dev-dependencies]
anyhow = "1.0.37"
tempfile  = "3.1.0"
tokio = { version = "1.0.1", features = ["full"] }
