[package]
name = "nstar"
version = "0.2.4"
authors = ["ESRLabs"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
colored = "2.0.0"
directories = "3.0.1"
futures = "0.3.8"
itertools = "0.10.0"
northstar = { path = "../northstar", features = ["api"], default-features = false }
npk = { path = "../npk" }
prettytable-rs = "0.8.0"
regex = "1.4.2"
rustyline = { git = "https://github.com/gwenn/rustyline.git", branch = "external-print", features = ["with-fuzzy"] }
rustyline-derive = "0.4.0"
serde_json = "1.0.61"
structopt = "0.3.21"
tokio = { version = "1.0.1", features = ["full"] }
url = "2.2.1"