[package]
name = "nstar"
version = "0.3.0"
authors = ["ESRLabs"]
edition = "2018"

[dependencies]
anyhow = "1.0"
futures = "0.3.8"
itertools = "0.10.0"
northstar = { path = "../northstar", features = ["api"], default-features = false }
prettytable-rs = "0.8.0"
structopt = "0.3.21"
tokio = { version = "1.4", features = [ "fs", "io-std", "io-util", "macros", "rt" ] }
url = { version = "2.2", features = ["serde"] }

[build-dependencies]
northstar = { path = "../northstar", features = ["api"], default-features = false }