[package]
name = "sextant"
version = "0.1.0"
authors = ["ESRLabs"]
edition = "2018"

[[bin]]
name = "sextant"

[dependencies]
anyhow = "1.0.34"
base64 = "0.13.0"
colored = "2.0.0"
ed25519-dalek = "1.0.1"
env_logger = "0.8.2"
fs_extra = "1.2.0"
glob = "0.3.0"
hex = "0.4.2"
itertools = "0.9.0"
log = "0.4.8"
north = {path = "../north"}
npk = { path = "../npk" }
rand = "0.7.3"
serde_yaml = "0.8.14"
sha2 = "0.9.2"
structopt = "0.3.20"
tempfile = "3.1.0"
uuid = "0.8.1"
which = "4.0.2"
# Replace the git dependency when https://github.com/zip-rs/zip/pull/200 is merged and released
zip = { git = "https://github.com/esrlabs/zip.git", branch = "support-extra-field", features = ["unreserved"] }
