[package]
name = "sextant"
version = "0.2.0"
authors = ["ESRLabs"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
base64 = "0.13.0"
colored = "2.0.0"
ed25519-dalek = "1.0.1"
env_logger = "0.8.2"
log = "0.4.11"
north = {path = "../north"}
npk = { path = "../npk" }
structopt = "0.3.20"
tempfile = "3.1.0"
which = "4.0.2"
