[package]
name = "sextant"
version = "0.2.0"
authors = ["ESRLabs"]
edition = "2018"

[dependencies]
anyhow = "1.0.37"
base64 = "0.13.0"
colored = "2.0.0"
ed25519-dalek = "1.0.1"
env_logger = "0.8.2"
log = "0.4.11"
npk = { path = "../npk" }
structopt = "0.3.21"
tempfile = "3.1.0"
tokio = { version = "1.0.1", features = ["full"] }
which = "4.0.2"
