[package]
name = "stress"
version = "0.1.0"
authors = ["ESRLabs"]
edition = "2018"

[dependencies]
anyhow = "1.0"
futures = "0.3.8"
northstar = { path = "../northstar", features = ["api"], default-features = false }
structopt = "0.3.21"
tokio = { version = "1.4", features = ["full"] }
tokio-util = "0.6.5"
url = { version = "2.2", features = ["serde"] }
