[package]
name = "console"
version = "0.0.1"
authors = ["ESRLabs"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
tokio = { version = "1.21.0", features = ["macros", "rt", "net"] }
northstar-client = { path = "../../northstar-client" }
