[package]
name = "console"
version = "0.0.1"
authors = ["ESRLabs"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
tokio = { version = "1.28.2", features = ["macros", "rt", "net"] }
northstar-client = { path = "../../northstar-client" }

[package.metadata.npk]
manifest = "manifest.yaml"

[package.metadata.npk.target.'aarch64-unknown-linux-gnu']
use_cross = true

[package.metadata.npk.target.'aarch64-unknown-linux-musl']
use_cross = true

[package.metadata.npk.target.'aarch64-linux-android']
use_cross = true
