[package]
name = "custom"
version = "0.0.1"
authors = ["ESRLabs"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.80"
tokio = { version = "1.32.0", features = ["macros", "rt", "net"] }
northstar-client = { path = "../../northstar-client" }

[package.metadata.npk]
manifest = "manifest.yaml"

[package.metadata.npk.target.'aarch64-unknown-linux-gnu']
use_cross = true

[package.metadata.npk.target.'aarch64-unknown-linux-musl']
use_cross = true

[package.metadata.npk.target.'aarch64-linux-android']
use_cross = true