[package]
name = "redis-client"
version = "0.0.1"
authors = ["ESRLabs"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
bytes = "1.2.1"
mini-redis = "0.4.1"
tokio = { version = "1.23.0", features = ["macros", "rt", "net"] }

[package.metadata.npk]
manifest = "manifest.yaml"

[package.metadata.npk.target.'aarch64-unknown-linux-gnu']
use_cross = true

[package.metadata.npk.target.'aarch64-unknown-linux-musl']
use_cross = true

[package.metadata.npk.target.'aarch64-linux-android']
use_cross = true
