[package]
name = "test-container"
version = "0.0.1"
authors = ["ESRLabs"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
caps = "0.5.5"
clap = { version = "4.2.5", features = ["derive"] }
nix = { version = "0.26.2", default-features = false, features = ["process", "user", "socket"] }

[package.metadata.npk]
manifest = "manifest.yaml"

[package.metadata.npk.target.'aarch64-unknown-linux-gnu']
use_cross = true

[package.metadata.npk.target.'aarch64-unknown-linux-musl']
use_cross = true

[package.metadata.npk.target.'aarch64-linux-android']
use_cross = true
